--- a/TP_Github_Morana.ipynb
+++ b/TP_Github_Morana.ipynb
@@ -2,11 +2,57 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Début"
+    "# Import biblio\n",
+    "import pandas as pd\n",
+    "#import matplotlib.pyplot as plt\n",
+    "#import seaborn as sns\n",
+    "#from distinctipy import distinctipy\n",
+    "#from matplotlib.font_manager import FontProperties\n",
+    "#from matplotlib import rc\n",
+    "import numpy as np\n",
+    "\n",
+    "# Modifier les paramètres d'affichage de la sortie des commandes dans Jupyter\n",
+    "pd.set_option('display.max_rows', 100)\n",
+    "pd.set_option('display.max_columns', 50)\n",
+    "pd.set_option('display.width', 100)\n",
+    "\n",
+    "# ouverture du dataset\n",
+    "df = pd.read_csv(\"C:/Users/Robin/hello/Iris/Iris.data\",header=0,sep=\",\", low_memory=\"False\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<bound method DataFrame.info of      5.1  3.5  1.4  0.2     Iris-setosa\n",
+      "0    4.9  3.0  1.4  0.2     Iris-setosa\n",
+      "1    4.7  3.2  1.3  0.2     Iris-setosa\n",
+      "2    4.6  3.1  1.5  0.2     Iris-setosa\n",
+      "3    5.0  3.6  1.4  0.2     Iris-setosa\n",
+      "4    5.4  3.9  1.7  0.4     Iris-setosa\n",
+      "..   ...  ...  ...  ...             ...\n",
+      "144  6.7  3.0  5.2  2.3  Iris-virginica\n",
+      "145  6.3  2.5  5.0  1.9  Iris-virginica\n",
+      "146  6.5  3.0  5.2  2.0  Iris-virginica\n",
+      "147  6.2  3.4  5.4  2.3  Iris-virginica\n",
+      "148  5.9  3.0  5.1  1.8  Iris-virginica\n",
+      "\n",
+      "[149 rows x 5 columns]>\n"
+     ]
+    }
+   ],
+   "source": [
+    "# afficher infos dataset\n",
+    "print(df.info)"
    ]
   }
  ],
@@ -17,7 +63,15 @@
    "name": "python3"
   },
   "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
    "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
    "version": "3.10.9"
   },
   "orig_nbformat": 4
