--- a/TP_Github_Morana.ipynb
+++ b/TP_Github_Morana.ipynb
@@ -79,6 +79,38 @@
     "print(\"Afficher les premières lignes\")\n",
     "print(df.head(5))"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Index(['5.1', '3.5', '1.4', '0.2', 'Iris-setosa'], dtype='object')\n",
+      "0      4.9\n",
+      "1      4.7\n",
+      "2      4.6\n",
+      "3      5.0\n",
+      "4      5.4\n",
+      "      ... \n",
+      "144    6.7\n",
+      "145    6.3\n",
+      "146    6.5\n",
+      "147    6.2\n",
+      "148    5.9\n",
+      "Name: 5.1, Length: 149, dtype: float64\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Feature 1\n",
+    "print(df.columns)\n",
+    "df_filtered = df[\"5.1\"]\n",
+    "print(df_filtered)"
+   ]
   }
  ],
  "metadata": {
