changement nom features + feature 2

--- a/TP_Github_Morana.ipynb
+++ b/TP_Github_Morana.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -21,12 +21,12 @@
     "pd.set_option('display.width', 100)\n",
     "\n",
     "# ouverture du dataset\n",
-    "df = pd.read_csv(\"C:/Users/Robin/hello/Iris/Iris.data\",header=0,sep=\",\", low_memory=\"False\")"
+    "df = pd.read_csv(\"src/Iris.data\",header=0,sep=\",\", low_memory=\"False\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -110,6 +110,17 @@
     "print(df.columns)\n",
     "df_filtered = df[\"5.1\"]\n",
     "print(df_filtered)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Feature 2\n",
+    "import matplotlib.pyplot as plt\n",
+    "\n"
    ]
   }
  ],
