--- a/TP_Github_Morana.ipynb
+++ b/TP_Github_Morana.ipynb
@@ -124,7 +124,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -136,6 +136,14 @@
      },
      "metadata": {},
      "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Test Feature 3\n",
+      "Test Feature 3\n"
+     ]
     }
    ],
    "source": [
@@ -144,7 +152,11 @@
     "\n",
     "# affichage du stackplot\n",
     "ax=plt.hist(df_filtered, color='lightgreen', ec='black', bins=15)\n",
-    "plt.show()\n"
+    "plt.show()\n",
+    "\n",
+    "# Ajout d'une ligne de code\n",
+    "print(\"Test Feature 3\")\n",
+    "print(\"Test Feature 3\")"
    ]
   }
  ],
